--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -814,6 +814,7 @@
                                 <rect key="frame" x="16" y="22" width="49" height="49"/>
                                 <connections>
                                     <action selector="openMenu:" destination="4Ha-oY-g2l" eventType="touchUpInside" id="ONi-yI-Pgq"/>
+                                    <action selector="openMenuDown:" destination="4Ha-oY-g2l" eventType="touchDown" id="d5Z-LV-0VL"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q7I-uA-Ri5" userLabel="SearchBgView" customClass="RoundBtnViewStyle" customModule="LoLympics" customModuleProvider="target">
@@ -842,6 +843,7 @@
                                 <rect key="frame" x="310" y="22" width="49" height="49"/>
                                 <connections>
                                     <action selector="openSearch:" destination="4Ha-oY-g2l" eventType="touchUpInside" id="J4P-aQ-1tP"/>
+                                    <action selector="openSearchDown:" destination="4Ha-oY-g2l" eventType="touchDown" id="Tg4-cS-jMs"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="431" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KfR-Qj-BWx">
@@ -949,6 +951,7 @@
                                                             <rect key="frame" x="310" y="348" width="49" height="49"/>
                                                             <connections>
                                                                 <action selector="postShareAction:" destination="suH-sr-8Qn" eventType="touchUpInside" id="0St-MM-oeE"/>
+                                                                <action selector="postShareDown:" destination="suH-sr-8Qn" eventType="touchDown" id="KIR-YY-Wto"/>
                                                             </connections>
                                                         </button>
                                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pfK-MJ-sVN">
@@ -1094,6 +1097,7 @@
                                             <outlet property="excerptLbl" destination="OPi-mu-CIe" id="rAm-ok-3II"/>
                                             <outlet property="featuredImg" destination="yeV-02-6Kc" id="aKW-pR-1lH"/>
                                             <outlet property="imageDescLbl" destination="8X5-OZ-ukO" id="Z9Y-eK-SoC"/>
+                                            <outlet property="postShareHover" destination="K71-0r-j1d" id="FLP-io-Qr1"/>
                                             <outlet property="titleLbl" destination="nz6-qT-EkE" id="WNV-BA-vJd"/>
                                         </connections>
                                     </tableViewCell>
@@ -1136,7 +1140,8 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
                     <connections>
-                        <outlet property="openMenuBg" destination="Nwy-eR-sZK" id="Hcd-wU-KYz"/>
+                        <outlet property="openMenuHover" destination="Nwy-eR-sZK" id="yqd-La-zCS"/>
+                        <outlet property="openSearchHover" destination="Q7I-uA-Ri5" id="UMF-kM-NSv"/>
                         <outlet property="tableView" destination="KfR-Qj-BWx" id="BOl-GP-fgL"/>
                         <segue destination="iap-FA-Wmr" kind="show" identifier="DetailVC" id="idt-5R-7GN"/>
                         <segue destination="Yu8-mF-eP9" kind="presentation" identifier="ViewerVC" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="tqm-Hi-gbU"/>
@@ -1659,6 +1664,7 @@
                                             <rect key="frame" x="310" y="208" width="49" height="49"/>
                                             <connections>
                                                 <action selector="postShareAction:" destination="iap-FA-Wmr" eventType="touchUpInside" id="Iw3-zd-TzG"/>
+                                                <action selector="postShareDown:" destination="iap-FA-Wmr" eventType="touchDown" id="wCF-9v-S99"/>
                                             </connections>
                                         </button>
                                     </subviews>
@@ -1868,6 +1874,7 @@
                                 <rect key="frame" x="16" y="20" width="49" height="49"/>
                                 <connections>
                                     <action selector="DetailsBackBtn:" destination="iap-FA-Wmr" eventType="touchUpInside" id="2wN-YO-Q50"/>
+                                    <action selector="backBtnDown:" destination="iap-FA-Wmr" eventType="touchDown" id="Dzy-C2-vpR"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1896,6 +1903,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="700"/>
                     <connections>
+                        <outlet property="backBtnHover" destination="Jhe-zD-65Z" id="rID-P6-Hw8"/>
                         <outlet property="backBtnLbl" destination="Jhe-zD-65Z" id="BS3-K2-hTc"/>
                         <outlet property="backBtnView" destination="vNr-SG-ynL" id="prf-TM-mNX"/>
                         <outlet property="categoryLbl" destination="OMe-8C-O9Z" id="ex6-qu-Xfq"/>
@@ -1904,6 +1912,7 @@
                         <outlet property="headerImage" destination="wsd-aa-f3j" id="Ky6-mS-ZL4"/>
                         <outlet property="imageViewer" destination="JNJ-zQ-zII" id="pbp-uW-uCe"/>
                         <outlet property="postDate" destination="71W-YC-9sQ" id="VtP-pD-O3r"/>
+                        <outlet property="postShareHover" destination="sFd-nB-ge3" id="DNu-Zc-oDt"/>
                         <outlet property="tableView" destination="0XQ-z1-eaP" id="iRu-2W-1ux"/>
                         <outlet property="titleLbl" destination="WYt-yG-hQQ" id="IHb-lf-ycV"/>
                         <segue destination="Yu8-mF-eP9" kind="presentation" identifier="ViewerVC" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="9OC-pK-jr8"/>
@@ -3100,6 +3109,6 @@ penalties forbidden.</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="IhS-C5-udh"/>
-        <segue reference="WXf-LS-DY9"/>
+        <segue reference="9OC-pK-jr8"/>
     </inferredMetricsTieBreakers>
 </document>
